config/envoy/proxy-xds.yaml
admin:
  accessLogPath: /dev/stdout
  address:
    socketAddress:
      address: 0.0.0.0
      portValue: 9901
dynamic_resources:
  cds_config:
    api_config_source:
      api_type: GRPC
      grpc_services:
        envoy_grpc:
          cluster_name: xds
staticResources:
  clusters:
  - connectTimeout: 0.250s
    http2ProtocolOptions: {}
    loadAssignment:
      clusterName: xds
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: xds
                portValue: 10000
    name: xds
    type: STRICT_DNS
  listeners:
  - address:
      socketAddress:
        address: 0.0.0.0
        portValue: 10000
    filterChains:
    - filters:
      - config:
          accessLog:
          - config:
              format: |
                ingress [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"
              path: /dev/stdout
            name: envoy.file_access_log
          httpFilters:
          - name: envoy.grpc_json_transcoder
            config:
              print_options:
                add_whitespace: true
                preserve_proto_field_names: true
                always_print_primitive_fields: true
              proto_descriptor: /etc/proto/users/v2/users.pb
              services:
                - gomesh.users.v2.Users
          - name: envoy.router
          routeConfig:
            name: local
            virtualHosts:
            - domains:
              - '*'
              name: local
              routes:
              - match:
                  prefix: /
                route:
                  cluster: users-v2
            validate_clusters: false  # defer to CDS
          statPrefix: ingress_http
        name: envoy.http_connection_manager
    name: ingress
