config/envoy/sidecar-mongo.yaml
admin:
  accessLogPath: /dev/stdout
  address:
    socketAddress:
      address: 0.0.0.0
      portValue: 9901
dynamic_resources:
  cds_config:
    api_config_source:
      api_type: GRPC
      grpc_services:
        envoy_grpc:
          cluster_name: xds
staticResources:
  clusters:
  - connectTimeout: 0.250s
    http2ProtocolOptions: {}
    loadAssignment:
      clusterName: local
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 0.0.0.0
                portValue: 8000
    name: local
    type: STRICT_DNS
  - connectTimeout: 0.250s
    http2ProtocolOptions: {}
    loadAssignment:
      clusterName: xds
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: xds
                portValue: 10000
    name: xds
    type: STRICT_DNS
  listeners:
  - name: egress_mongo
    address:
      socketAddress:
        address: 0.0.0.0
        portValue: 27017
    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: egress_tcp
          cluster: mongo
      - name: envoy.mongo_proxy
        config:
          # access_log: /dev/stdout
          stat_prefix: egress_mongo
  - address:
      socketAddress:
        address: 0.0.0.0
        portValue: 11000
    filterChains:
    - filters:
      - config:
          accessLog:
          - config:
              format: >
                listener=egress start_time=%START_TIME%
                req_method=%REQ(:METHOD)% req_path=%REQ(PATH)% protocol=%PROTOCOL%
                response_code=%RESPONSE_CODE% response_flags=%RESPONSE_FLAGS%
                bytes_reveived=%BYTES_RECEIVED% bytes_sent=%BYTES_SENT% duration=%DURATION%
                resp_x_envoy_upstream_service_time=%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                req_x_envoy_original_path=%REQ(X-ENVOY-ORIGINAL-PATH)% req_x_forwarded_for=%REQ(X-FORWARDED-FOR)%
                req_user_agent="%REQ(USER-AGENT)%" req_x_request_id=%REQ(X-REQUEST-ID)%
                req_authority=%REQ(:AUTHORITY)% upstream_host=%UPSTREAM_HOST% upstream_cluster=%UPSTREAM_CLUSTER%
                resp_grpc_status=%RESP(grpc-status)% resp_grpc_message="%RESP(grpc-message)%"
                trailer_grpc_status=%TRAILER(grpc-status)% trailer_grpc_message="%TRAILER(grpc-message)%"
              path: /dev/stdout
            name: envoy.file_access_log
          httpFilters:
          - name: envoy.router
          routeConfig:
            name: local
            virtualHosts:
            - domains:
              - "*"
              name: local
              routes:
              - match:
                  prefix: /
                route:
                  cluster_header: :authority
          statPrefix: egress_http
        name: envoy.http_connection_manager
    name: egress
  - address:
      socketAddress:
        address: 0.0.0.0
        portValue: 10000
    filterChains:
    - filters:
      - config:
          accessLog:
          - config:
              format: >
                listener=ingress start_time=%START_TIME%
                req_method=%REQ(:METHOD)% req_path=%REQ(PATH)% protocol=%PROTOCOL%
                response_code=%RESPONSE_CODE% response_flags=%RESPONSE_FLAGS%
                bytes_reveived=%BYTES_RECEIVED% bytes_sent=%BYTES_SENT% duration=%DURATION%
                resp_x_envoy_upstream_service_time=%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                req_x_envoy_original_path=%REQ(X-ENVOY-ORIGINAL-PATH)% req_x_forwarded_for=%REQ(X-FORWARDED-FOR)%
                req_user_agent="%REQ(USER-AGENT)%" req_x_request_id=%REQ(X-REQUEST-ID)%
                req_authority=%REQ(:AUTHORITY)% upstream_host=%UPSTREAM_HOST% upstream_cluster=%UPSTREAM_CLUSTER%
                resp_grpc_status=%RESP(grpc-status) %resp_grpc_message="%RESP(grpc-message)%"
                trailer_grpc_status=%TRAILER(grpc-status)% trailer_grpc_message="%TRAILER(grpc-message)%"
              path: /dev/stdout
            name: envoy.file_access_log
          httpFilters:
          - name: envoy.grpc_http1_bridge
          - name: envoy.router
          routeConfig:
            name: local
            virtualHosts:
            - domains:
              - '*'
              name: local
              routes:
              - match:
                  prefix: /
                route:
                  cluster: local
          statPrefix: ingress_http
        name: envoy.http_connection_manager
    name: ingress
